--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -759,7 +759,14 @@
         height: 100%;
     }
 }
-
+@media(min-width:992px)
+{
+    .secondcontent{
+    position: relative;
+    top: 300px;
+    padding-bottom: 10px;
+}
+}
 #talk {
 
     /* // height:100vh; */
