--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1032,6 +1032,12 @@ body::-webkit-scrollbar-thumb {
     }
 }
 
+@media(max-width:768px) {
+    .rowBg2 {
+        margin-top: 15rem !important;
+    }
+}
+
 
 #animationWindow {
     width: 50%;
